# zero2prod

./: Cargo.toml
scripts/: init_db.sh
scripts/migrations/: 20250120051003_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
