[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = { version = "4"}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
serde = { version = "1", features = ["derive"]}
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "migrate", "chrono", "uuid"]}
config = "0.13"


[dev-dependencies]
reqwest = { version = "0.11" }